[package]
name = "facecloud-url-runner"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
tokio = { version = "1.37", features = ["rt-multi-thread", "macros"] }
reqwest = { version = "0.12", features = ["json", "gzip", "brotli", "deflate", "stream"] }
futures = "0.3"
